<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ben.oblig1.MainActivity">

    <Button
        android:id="@+id/mainGalleryButton"
        android:text="@string/mainGalleryButtonText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="mainOnGalleryClicked"
        />

    <Button
        android:id="@+id/mainListButton"
        android:text="@string/mainListButtonText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainGalleryButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="mainOnListClicked"
        />

    <Button
        android:id="@+id/mainLearningButton"
        android:text="@string/mainLearningButtonText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainGalleryButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="mainOnLearningClicked"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainClearButtonText"
        android:id="@+id/mainClearArchiveButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClearButton" />
</RelativeLayout>
