<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ben.oblig1.CreatePerson">

    <EditText
        android:id="@+id/personCreate_nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="30dp"
        android:hint="@string/personCreate_name" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/personCreate_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/personCreate_nameInput"
            android:layout_alignStart="@+id/personCreate_nameInput"
            android:layout_below="@+id/personCreate_nameInput"
            android:layout_column="0"
            android:layout_marginTop="0dp"
            android:layout_row="1"
            android:text="@string/personCreate_imageButton" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/personCreate_submitButton"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_toEndOf="@+id/personCreate_imageButton"
            android:layout_toRightOf="@+id/personCreate_imageButton"
            android:text="New Button" />
    </LinearLayout>

    <Button
        android:id="@+id/personCreate_submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personCreate_imageButton"
        android:layout_centerHorizontal="true"
        android:layout_column="0"
        android:layout_row="2"
        android:onClick="onNewPersonSubmitted"
        android:text="@string/personCreateSubmit"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/personCreate_imageView"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
